# pydantic-validation-error-replication

./: .gitignore  minimal_example.py  pyproject.toml
.zen/: config.yaml
src/evaluation/: schema.py
