[tool.poetry]
name = "pydantic-validation-error-replication"
packages = [{ include = "evaluation", from = "src" }]
version = "0.1.0"
description = ""
authors = ["Moritz Scherrmann <moritz.scherrmann@neoshare.de>"]
readme = "README.md"

[tool.poetry.dependencies]
pydantic = ">=2.7,<2.8"
pydantic-extra-types = "^2.9.0"
pydantic-settings = "^2.2.1"
pydantic-yaml = "^1.3.0"
python = "^3.11,<3.12"
zenml = "^0.62.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
